// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpHint renders with isOpened prop 1`] = `
<div
  className="HelpHint HelpHint_size_s HelpHint_opened"
  data-lego="react"
>
  <icon
    onClick={[Function]}
  />
  <tooltip
    anchor={[Function]}
    autoclosable={true}
    mainOffset={14}
    onOutsideClick={[Function]}
    size="s"
    tail={true}
    theme="white"
    to={
      Array [
        "right-center",
        "bottom-center",
        "top-center",
        "left-center",
      ]
    }
    tone="default"
    view="classic"
    visible={true}
    zIndexGroupLevel={2001}
  >
    <Bem
      block="HelpHint"
      elem="content"
    />
  </tooltip>
</div>
`;

exports[`HelpHint renders with passed className 1`] = `
<div
  className="HelpHint HelpHint_size_s className"
  data-lego="react"
>
  <icon
    onClick={[Function]}
  />
  <tooltip
    anchor={[Function]}
    autoclosable={true}
    mainOffset={14}
    onOutsideClick={[Function]}
    size="s"
    tail={true}
    theme="white"
    to={
      Array [
        "right-center",
        "bottom-center",
        "top-center",
        "left-center",
      ]
    }
    tone="default"
    view="classic"
    visible={false}
    zIndexGroupLevel={2001}
  >
    <Bem
      block="HelpHint"
      elem="content"
    />
  </tooltip>
</div>
`;
